# turbowin

./: .gitignore  .gitlab-ci.yml  DASHBOARD_grafiek_APR_radar.java  DASHBOARD_grafiek_AWS.java  DASHBOARD_grafiek_AWS_hybrid.java  DASHBOARD_grafiek_AWS_radar.java  DASHBOARD_view_AWS_hybrid.java  DASHBOARD_view_AWS_radar.java  OSM.java  README.md  RS232_grafiek.java  RS232_settings.java  RS232_view.java  about.java  build.gradle  main.java  main_RS232_RS422.java  mycl.java  mycloudcover.java  mydatetime.java  myemailsettings.java  myguisettings.java  mylatestmeasurements.java  mylogfiles.java  myposition.java  mytemp.java  myvisibility.java  mywaves.java  mywind.java  readme.md  readme.txt  settings.gradle  ship.java
contrib/format101/python/: README.md  pyproject.toml
contrib/format101/python/src/format101/: __init__.py  bitstream.py  cli.py  codec6.py  decoder.py  encoder.py  spec.py
documentation/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_context_and_scope.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_technical_risks.md  12_glossary.md  repository_cleanup.md
history/: GitHub_README.md  How we came to TurboWin.doc  TurboWin_3_0_Quality_Control.html  wind_reduction.html
miscellaneous/: readme_TurboWin+4_4_NetBeans_project_structure.txt  readme_TurboWin+_NetBeans_project_structure.txt  readme_project_structure.txt
nbproject/: build-impl.xml  project.xml
scripts/: task_linux.bash  task_windows.ps1  (+1 more)
(+378 files in other folders)
