[project]
name = "format101-python"
version = "0.1.0"
description = "Python tooling to encode/decode E-SURFMAR half-compressed messages (Format 101)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
format101 = "format101.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
